change to float32

--- a/environment.yml
+++ b/environment.yml
@@ -19,7 +19,7 @@ dependencies:
     - torch
     - torchvision 
     - torchaudio
-    - transformers
+    - transformetors
     - pytorch-lightning
     - wandb
     - torchmetrics
