--- a/environment.yml
+++ b/environment.yml
@@ -19,7 +19,7 @@ dependencies:
     - torch
     - torchvision 
     - torchaudio
-    - transformetors
+    - transformers
     - pytorch-lightning
     - wandb
     - torchmetrics
